--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
-
     <meta charset="UTF-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Brick Breaker Game</title>
-
     <link rel="stylesheet" href="styles.css">
-
+    <style>
+        /* Optional inline CSS */
+        body {
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+        }
+        #gameCanvas {
+            border: 2px solid #0095DD;
+            background-color: #000; /* Dark background for contrast */
+        }
+    </style>
 </head>
-
 <body>
-
-    <canvas id="gameCanvas"></canvas>
-
+    <canvas id="gameCanvas" width="480" height="320"></canvas>
     <script src="script.js"></script>
-
 </body>
-
 </html>
-
